home/calibre-web/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: calibre
  name: calibre
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app.kubernetes.io/name: calibre
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
  labels:
    app.kubernetes.io/name: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre
    spec:
      automountServiceAccountToken: false
      containers:
        - name: calibre
          image: linuxserver/calibre-web:0.6.24
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          volumeMounts:
            - mountPath: /config
              name: calibre-config
            - mountPath: /db
              name: calibre-db
            - mountPath: /books
              name: calibre-library
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
              ephemeral-storage: 256Mi
      volumes:
        - name: calibre-config
          nfs:
            server: <NFS_STOR_0_SERVER>
            path: <NFS_STOR_0_PATH>/system/calibre/config
        - name: calibre-db
          nfs:
            server: <NFS_STOR_0_SERVER>
            path: <NFS_STOR_0_PATH>/system/calibre/db
        - name: calibre-library
          nfs:
            server: <NFS_STOR_0_SERVER>
            path: <NFS_STOR_0_PATH>/multimedia/books
