home/calibre-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: books.<homelab-domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 8083
  tls:
    - hosts:
        - books.<homelab-domain>
      secretName: "books.<homelab-domain>-cert"
